<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium_2"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2">
        <RelativeLayout
            android:id="@+id/btnEmergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF3B30"
            android:padding="@dimen/margin_medium_2">
            <ImageView
                android:id="@+id/ivEmergency"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_medium"
                android:src="@drawable/ic_warning_white_24dp"/>
            <TextView
                android:id="@+id/tvEmergencyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                android:textSize="@dimen/text_heading"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/ivEmergency"/>
            <TextView
                android:id="@+id/tvEmergencyDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency_explain"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/white"
                android:layout_below="@id/tvEmergencyTitle"
                android:lineSpacingMultiplier="1.3"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/ivEmergency"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2">
        <RelativeLayout
            android:id="@+id/btnEmergencyCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium_2">
            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_medium"
                android:src="@drawable/ic_phone_black_24dp"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_phone"
                android:textSize="@dimen/text_heading"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/ivPhone"/>
            <TextView
                android:id="@+id/tvDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_explain"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/secondary_text"
                android:layout_below="@id/tvTitle"
                android:lineSpacingMultiplier="1.3"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/ivPhone"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2">
        <RelativeLayout
            android:id="@+id/btnQuestionAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium_2">
            <ImageView
                android:id="@+id/ivHelp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_medium"
                android:src="@drawable/ic_question_answer_black_24dp"/>
            <TextView
                android:id="@+id/tvHelpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qanda"
                android:textSize="@dimen/text_heading"
                android:textColor="@color/primary_text"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/ivHelp"/>
            <TextView
                android:id="@+id/tvHelpDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_explain"
                android:textSize="@dimen/text_regular"
                android:textColor="@color/secondary_text"
                android:layout_below="@id/tvHelpTitle"
                android:lineSpacingMultiplier="1.3"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_toRightOf="@id/ivHelp"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>